--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">TanTanSelector</string>
+    <string name="male" >♂ </string>
+    <string name="female" >♀ </string>
+
+    <string name="aquarius">水瓶座</string>
+    <string name="aries">白羊座</string>
+    <string name="cancer">巨蟹座</string>
+    <string name="capricorn"> 摩羯座</string>
+    <string name="gemini">双子座</string>、
+    <string name="leo">狮子座</string>
+    <string name="libra">天秤座</string>
+    <string name="pisces">双鱼座</string>
+    <string name="sagittarius">射手座</string>
+    <string name="scorpio">天蝎座</string>
+    <string name="taurus">金牛座</string>
+    <string name="virgo">处女座</string>
+
 </resources>
